--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ _build/default/lib/hello_erlang/.rebar3/rebar_compiler_erl/source.dag
 _build/default/lib/hello_erlang/include
 _build/default/lib/hello_erlang/priv
 _build/default/lib/hello_erlang/src
+.vscode
